--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@prisma/client": "3.15.2",
     "autoprefixer": "^10.4.7",
     "next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^3.15.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.1.3"
+    "tailwindcss": "^3.1.3",
+    "tap": "^16.3.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
