--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@auth0/nextjs-auth0": "^1.9.1",
     "@prisma/client": "3.15.2",
     "autoprefixer": "^10.4.7",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "postcss": "^8.4.14",
     "prisma": "^3.15.2",
     "react": "18.2.0",
